--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "if-env": "^1.0.0",
     "jest": "^21.2.1",
     "preact-cli": "^2.1.0",
+    "preact-cli-plugin-fast-async": "^1.0.1",
     "preact-render-spy": "^1.2.1"
   },
   "dependencies": {
@@ -34,7 +35,9 @@
     "preact": "^8.2.6",
     "preact-compat": "^3.17.0",
     "preact-head": "^1.0.2",
+    "preact-markup": "^1.6.0",
     "preact-router": "^2.5.7",
+    "react-html-parser": "^2.0.2",
     "react-lazy-load-image-component": "^1.1.1",
     "unistore": "^3.0.4"
   },
