--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Preact WWWIDPWA",
-  "short_name": "preactwwwidpwa",
+  "short_name": "prwwwidpwa",
   "start_url": "/",
   "display": "standalone",
   "orientation": "portrait",
