--- a/firebase.json
+++ b/firebase.json
@@ -10,7 +10,7 @@
     ],
     "headers": [
       {
-        "source": "/service-worker.js",
+        "source": "/sw.js",
         "headers": [
           {
             "key": "Cache-Control",
