--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Preact WWWIDPWA",
+  "name": "PreactJS WWWIDPWA",
   "short_name": "prwwwidpwa",
   "start_url": "/",
   "display": "standalone",
