--- a/package.json
+++ b/package.json
@@ -32,12 +32,16 @@
     "@fortawesome/fontawesome-free-brands": "^5.0.8",
     "@fortawesome/fontawesome-free-solid": "^5.0.8",
     "@fortawesome/react-fontawesome": "0.0.18",
+    "lazyimage": "^2.1.2",
     "preact": "^8.2.6",
     "preact-compat": "^3.17.0",
     "preact-head": "^1.0.2",
     "preact-router": "^2.5.7",
+    "react-graceful-image": "^1.2.6",
     "react-html-parser": "^2.0.2",
+    "react-lazy-blur": "^1.0.16",
     "react-lazy-load-image-component": "^1.1.1",
+    "react-progressive-bg-image": "^3.0.0",
     "unistore": "^3.0.4"
   },
   "jest": {
