--- a/firebase.json
+++ b/firebase.json
@@ -14,7 +14,7 @@
         "headers": [
           {
             "key": "Cache-Control",
-            "value": "no-cache"
+            "value": "max-age=3600"
           }
         ]
       },
