--- a/package.json
+++ b/package.json
@@ -25,25 +25,16 @@
     "jest": "^21.2.1",
     "preact-cli": "^2.1.0",
     "preact-cli-plugin-fast-async": "^1.0.1",
+    "preact-cli-sw-precache": "^1.0.3",
     "preact-render-spy": "^1.2.1"
   },
   "dependencies": {
-    "@fortawesome/fontawesome": "^1.1.4",
-    "@fortawesome/fontawesome-free-brands": "^5.0.8",
-    "@fortawesome/fontawesome-free-solid": "^5.0.8",
-    "@fortawesome/react-fontawesome": "0.0.18",
-    "lazyimage": "^2.1.2",
     "preact": "^8.2.6",
     "preact-compat": "^3.17.0",
     "preact-head": "^1.0.2",
     "preact-router": "^2.5.7",
-    "react-graceful-image": "^1.2.6",
     "react-html-parser": "^2.0.2",
-    "react-lazy": "^0.5.1",
-    "react-lazy-blur": "^1.0.16",
-    "react-lazy-load-image-component": "^1.1.1",
     "react-lazyimg-component": "0.0.2",
-    "react-progressive-bg-image": "^3.0.0",
     "unistore": "^3.0.4"
   },
   "jest": {
